# OOP

./: .gitignore  CMakeLists.txt  blok.txt  bločik.txt  main  main.c
src/: main.c  produkty.txt
w_1/: produkty.txt
w_1/cv/: main.c
w_10/cv/Milionar/: CMakeLists.txt  main.cpp  milionar.cpp  milionar.h  milionar.ui  questions.txt
w_10/pr/MyFirstQtApp/: MyFirstQtApp.cpp  MyFirstQtApp.h  MyFirstQtApp.pro  MyFirstQtApp.ui  main.cpp
w_11/cv/Eshop/: Blok.txt  CMakeLists.txt  eshop.cpp  eshop.h  eshop.ui  main.cpp
w_11/pr/ItemWidgetExample/: CMakeLists.txt
w_11/pr/ItemWidgetExample/src/: ItemWidgets2.cpp  ItemWidgets2.h  ItemWidgets2.qrc  ItemWidgets2.ui  Produkty.txt  main.cpp
w_2/cv/: main  main.cpp  tempCodeRunnerFile.cpp
w_2/pr/: pred_2  pred_2.cpp
w_3/cv/: main  main.cpp
w_3/pr/: main  main.cpp
w_4/cv/: blok.txt  main  main.cpp
w_6/cv/: main  main.cpp
w_6/pr/: main.cpp
w_7/cv/: main  main.cpp
w_7/pr/: main.cpp
w_8/test/: main.cpp
w_9/cv/: main  main.cpp
w_9/pr/: main.cpp
